--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ deploy:
   env: "Docker-env-1"
   bucket_name: "elasticbeanstalk-eu-central-1-285767009009"
   on:
-    branch: master
+    branch: main
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
