--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: eu-central-1
-  name: docker
-  env: Docker-env-1
+  name: react-app
+  env: ReactApp-env
   bucket_name: elasticbeanstalk-eu-central-1-285767009009
   skip_cleanup: true
   on:
