--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ deploy:
   name: docker-react
   env: DockerReact-env
   bucket_name: elasticbeanstalk-eu-central-1-285767009009
+  bucket_path: 'docker'
   on:
     branch: main
   access_key_id: $AWS_ACCESS_KEY
