--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ deploy:
   env: DockerReact-env
   bucket_name: elasticbeanstalk-eu-central-1-285767009009
   bucket_path: 'docker'
+  skip_cleanup: true
   on:
     branch: main
   access_key_id: $AWS_ACCESS_KEY
